style.css
html, body {
    margin: 0; padding: 0; border: 0; 
}
body {
    background: rgba(0, 0, 0, 0.85);
}

#title {
    font-family: 'Helvetica Neue', sans-serif;
    color: white;
    background-color: #333;
    font-size: 250%; 
    font-weight: 100; 
    line-height: 20px; 
    letter-spacing: 1px; 
    padding: 0 0 5px; 
    border-bottom: double #555; 
    border: 2px solid darkgray;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 0.5px;
}

h2{
    font-size: 100%;
}


#main {
    background: rgb(189, 180, 180);
    width: 70%;
    position: static;
    float: centre;
    top: 0;
    margin: auto;
    padding: 20px;
    height:1000px
}

.sidenav-alignment{
    width: 70%;
    background-color: #333;
    position: relative;
    float: centre;
    padding-left: 20px;
    padding-right: 20px;
    top: 0;
    margin: auto;
}

.sidenav {
    overflow: auto;
    background-color: #333;
}

.sidenav a {
    width: 10%;
    float: left;
    position: relative;
    color: grey;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    
}

.sidenav a:hover {
    background-color: lightgrey;
    color: black;
}

.sidenav a.active {
    background-color: green;
    color: black;
  }

tab {
    overflow: visible;
    border: 1px solid cadetblue;
    background-color: black;
}

button {
    background-color: crimson;
    border: none;
    color: white;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

button:hover {
    background-color: #34bd38;
    color: white;
  }

button1 {
    background-color: blue;
    border: none;
    color: rgb(160, 189, 32);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}

button1:hover {
    background-color: #34bdbd;
    color: black;
  }

  button2 {
    background-color: rgb(41, 220, 38);
    border: none;
    color: rgb(0, 0, 0);
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
}
button2:hover {
    background-color: #bd4f34;
    color: rgb(255, 255, 255);
  }

/* Mobile settings */
@media screen and (max-width: 700px) {
sidenav {
    width: 100%;
    height: auto;
    position: relative;
}

#main {
    background: rgb(189, 180, 180);
    width: 100%;
    position: relative;
    float: centre;
    top: 0;
    margin: auto;
    padding: 10px;
    height:1000px
}

#title {
    font-family: 'Helvetica Neue', sans-serif;
    color: white;
    background-color: #333;
    font-size: 150%; 
    font-weight: 100; 
    line-height: 20px; 
    letter-spacing: 1px; 
    padding: 0 0 5px; 
    border-bottom: double #555; 
    border: 2px solid darkgray;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 0.5px;
}


sidenav a {float: left;}

}

